[package]
name = "chisel-ng-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "chisel-server"
path = "src/main.rs"

[dependencies]
chisel-ng-common = { path = "../chisel-ng-common" }

tokio = { workspace = true }
russh = { workspace = true }
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen = { workspace = true }

clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rustyline = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
